<resources>
    <string name="app_name">Craig Goodison | Daniel Chu</string>
    <string name="userID">User ID</string>
    <string name="readingDate">Reading Date</string>
    <string name="readingTime">Reading Time</string>
    <string name="systolicReading">Systolic Reading</string>
    <string name="diastolicReading">Diastolic Reading</string>
    <string name="condition">Condition</string>
    <string name="submit">Submit</string>
    <string name="history">History</string>
    <string name="hintSystolicReading">Systolic</string>
    <string name="hintDiastolicReading">Diastolic</string>
    <string name="hintCondition">Condition</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="m2dAvg">Month-to-Date Average for all users</string>
    <string name="avgCondition">Average Condition</string>
    <string name="average">Average</string>
</resources>
